template/gateway/alpha/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.jkdev.duckdns.org"
    allowedRoutes:
      namespaces:
        from: All
  - name: test
    port: 5678
    protocol: TCP
    allowedRoutes:
      namespaces:
        from: All
